CON-844: stop hiding print button on IE

--- a/mips/mips.scss
+++ b/mips/mips.scss
@@ -15,9 +15,6 @@
 
 // IE specific styles
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .print-button {
-        display: none !important;
-    }
 }
 
 // Quick fixes for BCGlobal release
